--- a/index.html
+++ b/index.html
@@ -4,95 +4,133 @@
 <meta charset="UTF-8">
 <title>3D Modellvergleich</title>
 
-<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+<script type="module"
+  src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+</script>
 
 <style>
-body {
+html, body {
   margin: 0;
+  height: 100%;
   font-family: Arial, sans-serif;
-  height: 100vh;
   overflow: hidden;
-  display: flex;
 }
 
-/* Sidebar */
+/* ===== SIDEBAR ===== */
 #sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
   width: 220px;
   background: #1e1e1e;
   color: white;
   padding: 20px;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
+}
+
+#sidebar h2 {
+  margin-top: 0;
 }
 
 .year-btn {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 8px;
   background: #333;
   color: white;
-  padding: 12px;
-  margin-bottom: 10px;
   border: none;
   border-radius: 6px;
   cursor: pointer;
-  font-size: 16px;
 }
 
-.year-btn:hover { background: #555; }
+.year-btn:hover {
+  background: #555;
+}
 
-#compare-start {
-  margin-top: auto;
-  padding: 14px;
-  font-size: 16px;
-  background: #0066ff;
+#compare-btn {
+  margin-top: 20px;
+  padding: 12px;
+  width: 100%;
+  background: #0077ff;
   color: white;
   border: none;
-  border-radius: 6px;
+  border-radius: 8px;
   cursor: pointer;
+  font-size: 15px;
 }
 
-/* Main viewer */
-#main-viewer {
-  flex: 1;
-  background: #f2f2f2;
+/* ===== MAIN VIEW ===== */
+#main {
+  position: fixed;
+  left: 220px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #eee;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
-#main-viewer model-viewer {
+#main model-viewer {
   width: 80%;
   height: 80%;
 }
 
-/* Compare mode */
-#compare-mode {
+/* ===== COMPARE MODE ===== */
+#compare {
   position: fixed;
   inset: 0;
   background: white;
   display: none;
-  z-index: 9999;
+  z-index: 999;
 }
 
-#back-btn {
+/* Back button */
+#back {
   position: absolute;
-  top: 20px;
-  left: 20px;
-  z-index: 10000;
+  top: 16px;
+  left: 16px;
+  background: #000;
+  color: white;
+  border: none;
+  padding: 10px 14px;
+  border-radius: 6px;
+  cursor: pointer;
+  z-index: 2000;
+}
+
+/* Year selectors */
+.selector {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 2000;
+}
+
+#sel-left { left: 20px; }
+#sel-right { right: 20px; }
+
+.selector button {
+  padding: 8px 12px;
   background: #222;
   color: white;
   border: none;
-  padding: 12px 16px;
   border-radius: 6px;
   cursor: pointer;
 }
 
-/* Model container (deckungsgleich) */
+/* Viewer stack */
 #compare-container {
   position: absolute;
   inset: 0;
 }
 
-model-viewer.compare {
+.compare-viewer {
   position: absolute;
   inset: 0;
   width: 100%;
@@ -109,34 +147,17 @@ model-viewer.compare {
   position: absolute;
   top: 0;
   left: 50%;
-  width: 4px;
+  width: 5px;
   height: 100%;
   background: red;
+  transform: translateX(-50%);
   cursor: ew-resize;
-  z-index: 10001;
+  z-index: 1500;
 }
 
-/* Selectors */
-.selector-left, .selector-right {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  z-index: 10002;
-}
-
-.selector-left { left: 20px; }
-.selector-right { right: 20px; }
-
-.sel-btn {
-  background: #333;
-  color: white;
-  padding: 10px 14px;
-  border-radius: 6px;
-  border: none;
-  cursor: pointer;
+/* remove interaction hints */
+model-viewer::part(default-controls) {
+  display: none;
 }
 </style>
 </head>
@@ -145,99 +166,117 @@ model-viewer.compare {
 
 <!-- Sidebar -->
 <div id="sidebar">
-  <h3>Modelle</h3>
-  <button class="year-btn" onclick="showModel('1150.glb')">1150</button>
-  <button class="year-btn" onclick="showModel('1175.glb')">1175</button>
-  <button class="year-btn" onclick="showModel('1374.glb')">1374</button>
-  <button class="year-btn" onclick="showModel('1550.glb')">1550</button>
-  <button class="year-btn" onclick="showModel('1630.glb')">1630</button>
-  <button class="year-btn" onclick="showModel('1936.glb')">1936</button>
+  <h2>Modelle</h2>
+  <button class="year-btn" onclick="setMain('1150.glb')">1150</button>
+  <button class="year-btn" onclick="setMain('1175.glb')">1175</button>
+  <button class="year-btn" onclick="setMain('1374.glb')">1374</button>
+  <button class="year-btn" onclick="setMain('1550.glb')">1550</button>
+  <button class="year-btn" onclick="setMain('1630.glb')">1630</button>
+  <button class="year-btn" onclick="setMain('1936.glb')">1936</button>
 
-  <button id="compare-start" onclick="startCompare()">Vergleichen</button>
+  <button id="compare-btn">Vergleichen</button>
 </div>
 
 <!-- Main -->
-<div id="main-viewer">
-  <model-viewer id="main-model" camera-controls></model-viewer>
+<div id="main">
+  <model-viewer id="mainModel"
+    camera-controls
+    interaction-prompt="none">
+  </model-viewer>
 </div>
 
 <!-- Compare -->
-<div id="compare-mode">
-  <button id="back-btn" onclick="exitCompare()">← Zurück</button>
+<div id="compare">
+
+  <button id="back">← Zurück</button>
+
+  <div id="sel-left" class="selector">
+    <button onclick="mvA.src='1150.glb'">1150</button>
+    <button onclick="mvA.src='1175.glb'">1175</button>
+    <button onclick="mvA.src='1374.glb'">1374</button>
+    <button onclick="mvA.src='1550.glb'">1550</button>
+    <button onclick="mvA.src='1630.glb'">1630</button>
+    <button onclick="mvA.src='1936.glb'">1936</button>
+  </div>
+
+  <div id="sel-right" class="selector">
+    <button onclick="mvB.src='1150.glb'">1150</button>
+    <button onclick="mvB.src='1175.glb'">1175</button>
+    <button onclick="mvB.src='1374.glb'">1374</button>
+    <button onclick="mvB.src='1550.glb'">1550</button>
+    <button onclick="mvB.src='1630.glb'">1630</button>
+    <button onclick="mvB.src='1936.glb'">1936</button>
+  </div>
 
   <div id="compare-container">
-    <model-viewer id="mvA" class="compare" camera-controls></model-viewer>
-    <model-viewer id="mvB" class="compare" camera-controls></model-viewer>
+    <model-viewer id="mvA" class="compare-viewer"
+      camera-controls
+      interaction-prompt="none">
+    </model-viewer>
+
+    <model-viewer id="mvB" class="compare-viewer"
+      interaction-prompt="none">
+    </model-viewer>
   </div>
 
   <div id="slider"></div>
-
-  <div class="selector-left">
-    <button class="sel-btn" onclick="loadA('1150.glb')">1150</button>
-    <button class="sel-btn" onclick="loadA('1175.glb')">1175</button>
-    <button class="sel-btn" onclick="loadA('1374.glb')">1374</button>
-    <button class="sel-btn" onclick="loadA('1550.glb')">1550</button>
-    <button class="sel-btn" onclick="loadA('1630.glb')">1630</button>
-    <button class="sel-btn" onclick="loadA('1936.glb')">1936</button>
-  </div>
-
-  <div class="selector-right">
-    <button class="sel-btn" onclick="loadB('1150.glb')">1150</button>
-    <button class="sel-btn" onclick="loadB('1175.glb')">1175</button>
-    <button class="sel-btn" onclick="loadB('1374.glb')">1374</button>
-    <button class="sel-btn" onclick="loadB('1550.glb')">1550</button>
-    <button class="sel-btn" onclick="loadB('1630.glb')">1630</button>
-    <button class="sel-btn" onclick="loadB('1936.glb')">1936</button>
-  </div>
 </div>
 
 <script>
+const mainModel = document.getElementById("mainModel");
+const compare = document.getElementById("compare");
 const mvA = document.getElementById("mvA");
 const mvB = document.getElementById("mvB");
 const slider = document.getElementById("slider");
 
-function showModel(file) {
-  document.getElementById("main-model").src = file;
+mainModel.src = "1150.glb";
+
+function setMain(file) {
+  mainModel.src = file;
 }
 
-function startCompare() {
-  document.getElementById("compare-mode").style.display = "block";
+/* Compare open/close */
+document.getElementById("compare-btn").onclick = () => {
+  compare.style.display = "block";
   mvA.src = "1150.glb";
-  mvB.src = "1150.glb";
-}
+  mvB.src = "1936.glb";
+  setInitialCamera();
+};
 
-function exitCompare() {
-  document.getElementById("compare-mode").style.display = "none";
-}
+document.getElementById("back").onclick = () => {
+  compare.style.display = "none";
+};
 
-function loadA(file) { mvA.src = file; }
-function loadB(file) { mvB.src = file; }
-
-/* Slider logic */
+/* Slider */
 let dragging = false;
-slider.addEventListener("mousedown", () => dragging = true);
-window.addEventListener("mouseup", () => dragging = false);
-window.addEventListener("mousemove", e => {
+slider.onmousedown = () => dragging = true;
+window.onmouseup = () => dragging = false;
+window.onmousemove = e => {
   if (!dragging) return;
-  let x = Math.max(50, Math.min(window.innerWidth - 50, e.clientX));
+  const x = Math.max(50, Math.min(window.innerWidth - 50, e.clientX));
   slider.style.left = x + "px";
-  mvA.style.clipPath = `inset(0 ${window.innerWidth - x}px 0 0)`;
-  mvB.style.clipPath = `inset(0 0 0 ${x}px)`;
-});
+  const pct = x / window.innerWidth * 100;
+  mvA.style.clipPath = `inset(0 ${100-pct}% 0 0)`;
+  mvB.style.clipPath = `inset(0 0 0 ${pct}%)`;
+};
 
-/* Camera sync (Option C) */
+/* Camera sync (ONE direction) */
 let syncing = false;
-function sync(source, target) {
+mvA.addEventListener("camera-change", () => {
   if (syncing) return;
   syncing = true;
-  target.cameraOrbit = source.cameraOrbit;
-  target.cameraTarget = source.cameraTarget;
-  target.fieldOfView = source.fieldOfView;
-  setTimeout(() => syncing = false, 0);
-}
+  mvB.cameraOrbit = mvA.cameraOrbit;
+  mvB.cameraTarget = mvA.cameraTarget;
+  mvB.fieldOfView = mvA.fieldOfView;
+  requestAnimationFrame(() => syncing = false);
+});
 
-mvA.addEventListener("camera-change", () => sync(mvA, mvB));
-mvB.addEventListener("camera-change", () => sync(mvB, mvA));
+/* Stable start */
+function setInitialCamera() {
+  const orbit = "0deg 75deg 2.8m";
+  mvA.cameraOrbit = orbit;
+  mvB.cameraOrbit = orbit;
+}
 </script>
 
 </body>
