--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ html, body {
   z-index: 1000;
 }
 
+/* Buttons */
 #back, #reset {
   position: absolute;
   top: 16px;
@@ -109,6 +110,7 @@ html, body {
   flex-direction: column;
   gap: 10px;
   z-index: 2000;
+  background: transparent;
 }
 
 #sel-left { left: 20px; }
@@ -127,17 +129,18 @@ html, body {
 #compare-container {
   position: absolute;
   inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .compare-viewer {
-  width: 50%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   --poster-color: transparent;
 }
 
+/* Clip-Pfade für Slider */
 #mvA { clip-path: inset(0 50% 0 0); }
 #mvB { clip-path: inset(0 0 0 50%); }
 
@@ -262,7 +265,7 @@ window.onmousemove = e => {
   mvB.style.clipPath = `inset(0 0 0 ${pct}%)`;
 };
 
-/* Beide Modelle frei bewegbar, keine Sync */
+/* Beide Modelle frei bewegbar, keine Synchronisation */
 </script>
 
 </body>
