--- a/index.html
+++ b/index.html
@@ -129,14 +129,16 @@ html, body {
 #compare-container {
   position: absolute;
   inset: 0;
+  background: white;
 }
 
 .compare-viewer {
-  width: 100%;
-  height: 100%;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  width: 80%;   /* größer */
+  height: 80%;  /* größer */
+  transform: translate(-50%, -50%);
   --poster-color: transparent;
 }
 
