--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@ html, body {
   z-index: 1000;
 }
 
-/* Buttons */
 #back, #reset {
   position: absolute;
   top: 16px;
@@ -129,20 +128,16 @@ html, body {
 #compare-container {
   position: absolute;
   inset: 0;
-  background: white;
 }
 
 .compare-viewer {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 80%;   /* größer */
-  height: 80%;  /* größer */
-  transform: translate(-50%, -50%);
+  inset: 0;
+  width: 100%;
+  height: 100%;
   --poster-color: transparent;
 }
 
-/* Clip-Pfade für Slider */
 #mvA { clip-path: inset(0 50% 0 0); }
 #mvB { clip-path: inset(0 0 0 50%); }
 
@@ -259,15 +254,14 @@ slider.onmousedown = () => drag = true;
 window.onmouseup = () => drag = false;
 window.onmousemove = e => {
   if (!drag) return;
-  const rect = slider.parentElement.getBoundingClientRect();
-  const x = Math.max(rect.left, Math.min(rect.right, e.clientX));
+  const x = Math.max(50, Math.min(window.innerWidth - 50, e.clientX));
   slider.style.left = x + "px";
-  const pct = ((x - rect.left) / rect.width) * 100;
+  const pct = x / window.innerWidth * 100;
   mvA.style.clipPath = `inset(0 ${100-pct}% 0 0)`;
   mvB.style.clipPath = `inset(0 0 0 ${pct}%)`;
 };
 
-/* Beide Modelle frei bewegbar, keine Synchronisation */
+/* Keine bidirektionale Kamera-Synchronisation mehr */
 </script>
 
 </body>
